// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowHide should render a center-aligned button show-hide component 1`] = `
<div>
  <p>
    Test
  </p>
  <div
    aria-hidden={true}
    className="toggle"
  />
  <div
    className="show-hide"
  >
    <button
      aria-disabled={false}
      aria-expanded={false}
      className="button show-hide button center"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`ShowHide should render a default show-hide component 1`] = `
<div>
  <p>
    Test
  </p>
  <div
    aria-hidden={true}
    className="toggle"
  />
  <div
    className="show-hide"
  >
    <button
      aria-disabled={false}
      aria-expanded={false}
      className="button show-hide button start"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`ShowHide should render a no preview show-hide component 1`] = `
<div>
  <div
    aria-hidden={true}
    className="toggle"
  />
  <div
    className="show-hide"
  >
    <button
      aria-disabled={false}
      aria-expanded={false}
      className="button show-hide button start"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`ShowHide should render an initially open show-hide component 1`] = `
<div>
  <div
    aria-hidden={false}
    className="toggle"
  >
    Full Text
  </div>
  <div
    className="show-hide"
  >
    <button
      aria-disabled={false}
      aria-expanded={true}
      className="button show-hide button start"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      Hide
    </button>
  </div>
</div>
`;
